--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,13 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/home/baba/Téléchargements/openjfx/javafx-sdk-11.0.2/lib/javafx.base.jar",
-        "/home/baba/Téléchargements/openjfx/javafx-sdk-11.0.2/lib/javafx.controls.jar",
-        "/home/baba/Téléchargements/openjfx/javafx-sdk-11.0.2/lib/javafx.fxml.jar",
-        "/home/baba/Téléchargements/openjfx/javafx-sdk-11.0.2/lib/javafx.graphics.jar",
-        "/home/baba/Téléchargements/openjfx/javafx-sdk-11.0.2/lib/javafx.media.jar",
-        "/home/baba/Téléchargements/openjfx/javafx-sdk-11.0.2/lib/javafx.swing.jar",
-        "/home/baba/Téléchargements/openjfx/javafx-sdk-11.0.2/lib/javafx.web.jar",
-        "/home/baba/Téléchargements/openjfx/javafx-sdk-11.0.2/lib/javafx-swt.jar",
-        "/home/baba/Téléchargements/openjfx/lib/javafx.base.jar",
-        "/home/baba/Téléchargements/openjfx/lib/javafx.controls.jar",
-        "/home/baba/Téléchargements/openjfx/lib/javafx.fxml.jar",
-        "/home/baba/Téléchargements/openjfx/lib/javafx.graphics.jar",
-        "/home/baba/Téléchargements/openjfx/lib/javafx.media.jar",
-        "/home/baba/Téléchargements/openjfx/lib/javafx.swing.jar",
-        "/home/baba/Téléchargements/openjfx/lib/javafx.web.jar",
-        "/home/baba/Téléchargements/openjfx/lib/javafx-swt.jar"
+        "/c/Users/40ahm/Lib/openjfx/lib/javafx.base.jar",
+        "/c/Users/40ahm/Lib/openjfx/lib/javafx.controls.jar",
+        "/c/Users/40ahm/Lib/openjfx/lib/javafx.fxml.jar",
+        "/c/Users/40ahm/Lib/openjfx/lib/javafx.graphics.jar",
+        "/c/Users/40ahm/Lib/openjfx/lib/javafx.media.jar",
+        "/c/Users/40ahm/Lib/openjfx/lib/javafx.swing.jar",
+        "/c/Users/40ahm/Lib/openjfx/lib/javafx.web.jar",
+        "/c/Users/40ahm/Lib/openjfx/lib/javafx-swt.jar"
     ]
 }
